# mpv_bangumi

./: .gitignore  README.md  main.lua
bgm/: pyproject.toml
bgm/bgm/: __init__.py  __main__.py  api.py  bangumi.py  config.py  dandanplay.py  danmaku.py  db.py  llm.py  main.py  mpvbangumi.py  niconico.py  source.py  utils.py
lib/: bgm.lua  danmaku_render.lua  options.lua  utils.lua
luapython/: Makefile  README.md  luapython-0.1.5-2.rockspec  test.lua
luapython/luapython/: class.c  configure.lua  dict.c  function.c  import.c  import.lua  init.lua  iter.c  list.c  loader.c  luapython.c  luapython.h  module.c  number.c  set.c  string.c  tools.c  tools.h  tools.lua  tuple.c
