[project]
name = "bgm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "appdirs>=1.4.4",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "portalocker>=3.2.0",
    "pydantic>=2.11.4",
    "pymediainfo>=7.0.1",
    "python-mpv-jsonipc>=1.2.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "tenacity>=9.1.4",
    "toml>=0.10.2",
    "openai>=1.0.0",
]

[project.scripts]
bgm = "bgm.main:main"

[[tool.mypy.overrides]]
module = ["*.*"]
follow_untyped_imports = true
